fixed dropdown button height was set too high

--- a/src/stylesheets/vortex/page-game.scss
+++ b/src/stylesheets/vortex/page-game.scss
@@ -37,6 +37,9 @@
       button {
         margin: 4px 0;
       }
+      .toolbar-dropdown {
+        height: 80%;
+      }
     }
   }
 }
